Fix header spacing

--- a/style.css
+++ b/style.css
@@ -84,7 +84,9 @@ body {
 }
 
 h1 {
-  line-height: 2.5em;
+  margin: .5em 0;
+  font-size: 2rem;
+  line-height: 1.25em;
 }
 
 label {
